force-app/main/default/objects/OA_Connector_Run__c/OA_Connector_Run__c.object-meta.xml
<CustomObject>
    <description>Connector run telemetry for the Lead Enrichment Foundation. One row per connector execution; provenance for enrichment changes.</description>
    <label>OA Connector Run</label>
    <nameField>
        <displayFormat>RUN-{00000}</displayFormat>
        <label>OA Connector Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Connector Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>