force-app/main/default/objects/OA_Connector_Run__c/fields/Ended__c.field-meta.xml
<CustomField>
    <fullName>Ended__c</fullName>
    <label>Ended</label>
    <type>DateTime</type>
</CustomField>