force-app/main/default/objects/OA_Connector_Run__c/fields/Exceptions_Raised__c.field-meta.xml
<CustomField>
    <fullName>Exceptions_Raised__c</fullName>
    <label>Exceptions Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>