force-app/main/default/objects/OA_Connector_Run__c/fields/HTTP_Errors__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Errors__c</fullName>
    <label>HTTP Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>