force-app/main/default/objects/OA_Connector_Run__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OA_Connector_Runs</relationshipLabel>
    <relationshipName>OA_Connector_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>