force-app/main/default/objects/OA_Connector_Run__c/fields/Mapped__c.field-meta.xml
<CustomField>
    <fullName>Mapped__c</fullName>
    <label>Mapped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>