force-app/main/default/objects/OA_Connector_Run__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <label>Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>