force-app/main/default/objects/OA_Connector_Run__c/fields/Parsed__c.field-meta.xml
<CustomField>
    <fullName>Parsed__c</fullName>
    <label>Parsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>