force-app/main/default/objects/OA_Connector_Run__c/fields/Persisted__c.field-meta.xml
<CustomField>
    <fullName>Persisted__c</fullName>
    <label>Persisted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>