force-app/main/default/objects/OA_Connector_Run__c/fields/Records_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Records_Enriched__c</fullName>
    <label>Records Enriched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>