force-app/main/default/objects/OA_Connector_Run__c/fields/Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Run_ID__c</fullName>
    <externalId>true</externalId>
    <label>Run ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>